# DjangoStarterTutorial

./: .gitignore  README.md  pyproject.toml
djangotutorial/mysite/: settings.py
djangotutorial/polls/: admin.py  models.py  tests.py  views.py
djangotutorial/polls/migrations/: 0001_initial.py
djangotutorial/polls/templates/polls/: index.html
djangotutorial/templates/admin/: base_site.html
