[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "django-starter-tutorial"
version = "0.1.0"
description = "Django tutorial project"
readme = "README.md"
requires-python = ">=3.14"
license = { text = "MIT" }
authors = [{ name = "Your Name" }]

dependencies = [
    "django>=6.0.4",
]

